--- a/app.json
+++ b/app.json
@@ -39,7 +39,8 @@
           }
         }
       ],
-      "expo-localization"
+      "expo-localization",
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true,
