Extend onboarding, fridge, and localization functionality:
- Add invite code support in onboarding with UI and handling improvements.
- Extend fridge capabilities: implement product addition modal, barcode scanning, and manual entry.
- Update localization files for `en` and `uk` with additional support for new strings.
- Refactor goal selection in onboarding to include additional targets.
- Add `expo-barcode-scanner` and `@react-native-picker/picker` dependencies.

--- a/app.json
+++ b/app.json
@@ -40,7 +40,8 @@
         }
       ],
       "expo-localization",
-      "expo-secure-store"
+      "expo-secure-store",
+      "expo-barcode-scanner"
     ],
     "experiments": {
       "typedRoutes": true,
