--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.1.8",
     "axios": "^1.13.2",
     "expo": "~54.0.30",
+    "expo-auth-session": "^7.0.10",
     "expo-barcode-scanner": "^13.0.1",
     "expo-constants": "~18.0.12",
     "expo-font": "~14.0.10",
