Add `expo-dev-client` and update environment variables for Google OAuth
- Added `expo-dev-client` to dependencies.
- Updated `AuthService` to use environment variables for Google OAuth configuration.
- Updated iOS `bundleIdentifier` in `app.json`.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-auth-session": "^7.0.10",
     "expo-barcode-scanner": "^13.0.1",
     "expo-constants": "~18.0.12",
+    "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
