feat: update dependencies and refactor profile update logic

--- a/app.json
+++ b/app.json
@@ -46,8 +46,7 @@
         }
       ],
       "expo-localization",
-      "expo-secure-store",
-      "expo-barcode-scanner"
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true,
